Fix github icon text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,27 +107,38 @@ form.newsletter button:hover {
   justify-content: center;
   gap: 1rem 1rem;
   align-items: center;
+  font-size: 0.8rem;
+  color: #666;
 }
 
 .footer-list li {
   display: flex;
   align-items: center;
-  gap: 0.4rem;
 }
 
 .footer-list a {
-  color: #666;
+  color: inherit;
   text-decoration: none;
   font-weight: 500;
 }
+
 .footer-list a:hover {
   text-decoration: underline;
 }
 
-.footer-list .icon {
+.github-inline {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.4rem;
+}
+
+.icon {
   width: 1em;
   height: 1em;
+  display: inline-block;
   vertical-align: middle;
+  position: relative;
+  top: 0.05em;
   fill: currentColor;
 }
 
